<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:id="@+id/perm_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

    <ImageView
        android:id="@+id/my_detail_photo_perm"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        tools:src="@drawable/usericon"/>

    <TextView
        android:id="@+id/my_detail_name_perm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/detail_photo"
        android:layout_toRightOf="@+id/my_detail_photo_perm"
        android:padding="2dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="false"
        tools:text="Shubhrakanti Ganguly"/>

    <!--<ImageView-->
    <!--android:id="@+id/my_detail_gender"-->
    <!--android:layout_width="25dp"-->
    <!--android:layout_height="25dp"-->
    <!--android:layout_toEndOf="@id/detail_name"-->
    <!--android:layout_toRightOf="@+id/my_detail_name_perm"-->
    <!--android:padding="2dp"-->
    <!--tools:src="@drawable/male"/>-->

    <TextView
        android:id="@+id/my_detail_phone_perm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/detail_name"
        android:layout_toEndOf="@+id/detail_photo"
        android:layout_toRightOf="@+id/my_detail_photo_perm"
        android:autoLink="phone"
        android:padding="2dp"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:layout_below="@+id/my_detail_name_perm"
        android:layout_alignLeft="@+id/my_detail_name_perm"
        tools:text="4088939416"/>

    <TextView
        android:id="@+id/my_detail_email_perm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/my_detail_name_perm"
        android:layout_alignStart="@id/detail_name"
        android:layout_below="@+id/my_detail_phone_perm"
        android:layout_toEndOf="@+id/detail_photo"
        android:layout_toRightOf="@+id/my_detail_photo_perm"
        android:autoLink="email"
        android:padding="2dp"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        tools:text="boboshubithergreat"/>

    <!--<TextView-->
    <!--android:id="@+id/my_detail_website"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/my_detail_name_perm"-->
    <!--android:layout_alignStart="@id/detail_name"-->
    <!--android:layout_below="@+id/my_detail_email_perm"-->
    <!--android:layout_toEndOf="@+id/detail_photo"-->
    <!--android:layout_toRightOf="@+id/my_detail_photo_perm"-->
    <!--android:autoLink="web"-->
    <!--android:padding="2dp"-->
    <!--android:textColor="@color/colorText"-->
    <!--android:textSize="13sp" />-->

    <ImageButton
        android:id="@+id/my_detail_facebook_perm"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/my_detail_name_perm"
        android:layout_alignStart="@id/detail_name"
        android:layout_below="@+id/my_detail_email_perm"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/detail_photo"
        android:layout_toRightOf="@+id/my_detail_photo_perm"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@drawable/facebook_color"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ImageButton
        android:id="@+id/my_detail_instagram_perm"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@+id/my_detail_email_perm"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/detail_facebook"
        android:layout_toRightOf="@+id/my_detail_facebook_perm"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@drawable/instagram_color"
        android:visibility="gone"
        tools:visibility="visible"/>

    <!--<ImageButton-->
    <!--android:id="@+id/my_detail_wechat"-->
    <!--android:layout_width="45dp"-->
    <!--android:layout_height="45dp"-->
    <!--android:layout_margin="3dp"-->
    <!--android:layout_toEndOf="@+id/my_detail_email_perm"-->
    <!--android:layout_toRightOf="@+id/my_detail_instagram_perm"-->
    <!--android:background="@null"-->
    <!--android:scaleType="centerInside"-->
    <!--android:src="@drawable/wechatcolor"-->
    <!--android:visibility="gone" />-->

    <TextView
        android:id="@+id/my_detail_aboutme_perm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/my_detail_photo_perm"
        android:layout_alignStart="@id/my_detail_photo_perm"
        android:layout_below="@+id/my_detail_photo_perm"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:text="@string/about_me_detail"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/my_detail_scrollview_perm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/my_detail_aboutme_perm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/my_detail_aboutme_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorText"
            android:textSize="13sp"
            tools:text="hehe"/>
    </ScrollView>


    <Button
    android:id="@+id/edit_my_card_perm"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/my_detail_scrollview_perm"
    android:layout_centerHorizontal="true"
    android:text="Edit Profile"
    />
    
    </RelativeLayout>

    <ScrollView
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/container_with_dotted_border_user_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/dotted_border">

                <ImageButton
                    android:id="@+id/user_photo_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/usericon" />

                <ImageView
                    android:id="@+id/genderIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="start"
                    android:padding="1dp" />

            </FrameLayout>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/container_with_dotted_border_user_photo"
                android:layout_toEndOf="@+id/container_with_dotted_border_user_photo"
                android:layout_toRightOf="@+id/container_with_dotted_border_user_photo"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp" />

            <com.kylewbanks.android.iconedittext.IconEditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_with_dotted_border_user_photo"
                android:layout_marginTop="10dp"
                android:inputType="phone"
                widget:hint="@string/phone"
                widget:iconSrc="@drawable/phone"
                widget:isPassword="false" />

            <com.kylewbanks.android.iconedittext.IconEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_phone"
                android:inputType="textEmailAddress"
                widget:hint="@string/email"
                widget:iconSrc="@drawable/emailicon"
                widget:isPassword="false" />

            <!--<com.kylewbanks.android.iconedittext.IconEditText-->
            <!--android:id="@+id/facebook_account"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/email_address"-->
            <!--android:inputType="textUri"-->
            <!--widget:hint="@string/facebook"-->
            <!--widget:iconSrc="@drawable/facebookicon"-->
            <!--widget:isPassword="false" />-->

            <!--<com.kylewbanks.android.iconedittext.IconEditText-->
            <!--android:id="@+id/website"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/email_address"-->
            <!--android:inputType="textUri"-->
            <!--widget:hint="@string/website"-->
            <!--widget:iconSrc="@drawable/link"-->
            <!--widget:isPassword="false" />-->

            <ImageView
                android:id="@+id/about_me_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/email_address"
                android:src="@drawable/about_me" />

            <FrameLayout
                android:id="@+id/container_with_dotted_border_resume"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/email_address"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/about_me_icon"
                android:layout_toRightOf="@+id/about_me_icon"
                android:background="@drawable/dotted_border">

                <EditText
                    android:id="@+id/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorFragment"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/about_me"
                    android:inputType="textMultiLine"
                    android:padding="2dp" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/social_media_label_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_with_dotted_border_resume"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    style="@style/AppTheme.Base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/social_media_label"
                    android:layout_margin="2dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/social_media_label"
                    android:textSize="20sp"
                    />


                <LinearLayout
                    android:id="@+id/social_media_divider_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/social_media_label"
                    android:orientation="horizontal"
                    >
                    <View
                        android:id="@+id/social_media_divider"
                        android:layout_width="0dp"
                        android:layout_weight=".82"
                        android:layout_height="1.35dp"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/white" />
                    <View
                        android:layout_width="0dp"
                        android:layout_weight=".15"
                        android:layout_height="1.35dp"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/facebook_layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/social_media_label_container"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/facebook_login_logo"
                    android:layout_width="0dp"
                    android:layout_weight=".15"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebookicon"
                    android:layout_gravity="center"
                    android:visibility="visible" />
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".85"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:visibility="gone"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/fb_remove_profile_button"
                    style="@style/com_facebook_loginview_default_style"
                    android:background="@color/com_facebook_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".85"
                    android:layout_gravity="center_vertical"
                    android:minHeight="38dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/facebook_remove_profile"
                    android:textSize="13sp"
                    android:visibility="visible"
                    />
                <com.ren.HelpDialogButtonView
                    xmlns:HelpDialog="http://schemas.android.com/apk/res-auto"
                    style="@style/com_facebook_button"
                    android:background="@color/com_facebook_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:minWidth="30dp"
                    android:minHeight="38dp"
                    HelpDialog:dialogTitle="@string/facebook_help_dialog_title"
                    HelpDialog:dialogMsg="@string/facebook_help_dialog_msg"
                    HelpDialog:dialogDrawable="@android:drawable/ic_dialog_info"
                    />
            </LinearLayout>

            <com.kylewbanks.android.iconedittext.IconEditText
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/facebook_layout_container"
                android:layout_margin="5dp"
                android:inputType="textUri"
                widget:hint="@string/instagram"
                widget:iconSrc="@drawable/instagram"
                widget:isPassword="false" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1.25dp"
                android:layout_below="@+id/instagram"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent" />

            <Button
                android:id="@+id/account"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/divider1"
                android:text="@string/account"
                android:visibility="gone"/>

            <Button
                android:id="@+id/update_profile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/account"
                android:text="@string/update_profile"/>
            <!--android:visibility="gone"/>-->

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/update_profile" />


        </RelativeLayout>

    </ScrollView>

    








</FrameLayout>